--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://usrandradl:kX9zLUtGyqYJMqvk@cluster0.pxivw.mongodb.net/Cluster0?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://user:***@cluster0.pxivw.mongodb.net/Cluster0?retryWrites=true&w=majority
 server.port=8090
